MJ 15/08/05
- Added MethodInvoker, a Control that can invoke a "void method()" type of
  method
- Some minor cleanup on error message printing

MJ 10/08/05
I added a number of changes, some of them will break existing config files:
- Refactoring the Wire* controls. They have a common superclass now and
  the NodeInitializer implementations were separated into separate classes
  (RandNI and StarNI).
- The Wire* classes now have a public Graph field that can be used to
  initialize arbitrary graphs (see classdocs of WireGraph).
- In all classes that used it, now "undir" and "undirected" are both
  accepted as equivalent parameters.
- RENAMED A VERY POPULAR CLASS: now WireRegularRandom is WireKOut, which
  is the correct name for it. In the past it caused lots of confusion, we
  finally got rid of the bogous name.
- RENAMED VERY POPULAR PARAMETERS: instead of "degree", now every class
  uses "k".

MJ 06/08/05
- The endtime parameter's semantics slightly changed: now the interval
  ov valid times is from zero to endtime, _exclusive_ the endtime.
- Refactored the cycle based protocol support in the event driven
  engine. Now we have a Control (and also NodeInitializer): CDScheduler
  that schedules the first execution of the protocol instances. It has
  a "nexcycle" parameter in which an object can be specified that extends
  NextCycleEvent and that specifies the delay until the next execution of
  the protocol instance. A few example implementations are included too.

AM 23/07/05
- Cleaned up some imports, that were generating warnings in Eclipse. 
  Cleaned up documentation, changed access rights of all parameters 
  but one (Node.PAR_PROT) to private, and added @config tags.
  Started a first clean-up of documentation and code.
  Some reformatting, particularly in the examples.
  NOTE: This commit is HUGE, but it is just an aesthetic commit; no
  fundamental code has been changed.
  
MJ 21/07/05
- Added some implementations of NextCycleEvent

MJ 20/07/05